# sharpedge

./: .env.example  .flake8  .gitignore  ENHANCEMENTS.md  NEXT_STEPS.md  README.md  UPGRADE_ROADMAP.md  docker-compose.yml  event-markets-quant-enhancements.md  pyproject.toml  requirements.txt  ruff.toml
.planning/: COPILOT-CHECKPOINT-RETENTION.md  COPILOT-COMMERCIAL-01-CONTEXT.md  COPILOT-COMMERCIAL-ROADMAP.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-quant-engine/: 01-01-PLAN.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
FinnAI/: 01_AGENT_GRAPHS.md  02_SPORTS_BETTING_AGENT_ARCHITECTURE.md  11_QUANT_FACTORY_E2E_WORKFLOW_AND_PROMPT_STRESS_SUITE.md
apps/bot/: pyproject.toml
apps/bot/src/sharpedge_bot/: bot.py  config.py  main.py  microcopy.py
apps/bot/src/sharpedge_bot/agents/: discord_copilot.py  game_analyst.py  research_agent.py  review_agent.py  tools.py
apps/bot/src/sharpedge_bot/commands/: analysis.py  bankroll.py  betting.py  lines.py  market.py  prediction_markets.py  research.py  review.py  stats.py  subscription.py  value.py
apps/bot/src/sharpedge_bot/embeds/: analysis_embeds.py  bet_embeds.py  lines_embeds.py  stats_embeds.py
apps/bot/src/sharpedge_bot/events/: on_member_join.py  on_ready.py
apps/bot/src/sharpedge_bot/jobs/: alert_dispatcher.py  arbitrage_scanner.py  consensus_calc.py  odds_monitor.py  opening_lines.py  prediction_market_scanner.py  scheduler.py  value_scanner_job.py
apps/bot/src/sharpedge_bot/middleware/: rate_limiter.py  tier_check.py
apps/bot/src/sharpedge_bot/services/: bankroll_service.py  bet_service.py  kalshi_executor.py  odds_service.py  stats_service.py  subscription_service.py
apps/bot/src/sharpedge_bot/utils/: chart_sender.py  formatting.py  odds_math.py
apps/bot/tests/: test_fcm_ordering.py
apps/mobile/: README.md  pubspec.yaml
apps/web/: package-lock.json  package.json
apps/webhook_server/: pyproject.toml
apps/webhook_server/src/sharpedge_webhooks/: config.py  copilot_lifespan.py  copilot_rate_limit.py  main.py
apps/webhook_server/src/sharpedge_webhooks/jobs/: alert_poster.py  line_movement_monitor.py  result_watcher.py  retrain_scheduler.py
apps/webhook_server/src/sharpedge_webhooks/routes/: mobile.py  revenuecat.py  stripe.py  whop.py
apps/webhook_server/src/sharpedge_webhooks/routes/v1/: __init__.py  bankroll.py  bets.py  copilot.py  deps.py  game_analysis.py  markets.py  notifications.py  odds_lines.py  portfolio.py  prediction_markets.py  swarm.py  value_plays.py
apps/webhook_server/src/sharpedge_webhooks/services/: push_service.py
apps/webhook_server/src/sharpedge_webhooks/services/social/: __init__.py  discord_client.py  formatter.py  image_generator.py  instagram_client.py  post_service.py  twitter_client.py
apps/webhook_server/tests/: test_revenuecat.py  test_whop_tier_push.py
apps/webhook_server/tests/unit/api/: test_bankroll_simulate.py  test_bets_log.py  test_copilot_sse.py  test_copilot_tool_summary.py  test_device_token.py  test_dislocation_endpoint.py  test_exposure_endpoint.py  test_game_analysis.py  test_odds_lines.py  test_pm_correlation_endpoint.py  test_portfolio.py  test_rls.py  test_swarm.py  test_value_plays_v1.py
data/: promotion_gate_nba_20260316_014302.json  promotion_gate_nba_20260316_031655.json  promotion_gate_nfl_20260316_031355.json  promotion_gate_nfl_20260316_031655.json  promotion_gate_nfl_20260316_032208.json  promotion_gate_nfl_20260316_032212.json  walk_forward_nba_report.json  walk_forward_nfl_report.json
data/calibration_reports/: nba_calibration.json  nfl_calibration.json
data/processed/: feature_metadata.json  mlb_training.csv  mlb_training.parquet  nba_training.parquet  ncaab_training.csv  ncaab_training.parquet  nfl_training.csv  nfl_training.parquet  nhl_training.csv  nhl_training.parquet
docs/: COPILOT_PLAYBOOK.md  FEATURE_OVERVIEW.md  NEXT_PHASES_BRIEF.md  PITCH_DECK.md  PLATFORM_FEATURES.md  REALTIME_ARB_SCANNER.md  SHARPEDGE_REVIEW_PHASE1.md  SOCIAL_MEDIA_SETUP.md  TECHNICAL_ARCHITECTURE.md  TRADING_SWARM.md  USER_GUIDE.md
scripts/: __init__.py  approve_live.py  deploy_schema.py  download_historical_data.py  download_pm_historical.py  export_kalshi_training.py  generate_promotion_gate.py  process_historical_data.py  process_pm_historical.py  retrain_if_ready.py  run_ablation.py  run_arb_stream.py  run_calibration.py  run_scanners.py  run_walk_forward.py  schema.sql  schema_rls.sql  seed_data.py  train_models.py  train_pm_models.py
tests/: conftest.py
tests/integration/: test_alpha_pipeline.py  test_rls_endpoints.py
(+332 files in other folders)
