[project]
name = "sharpedge"
version = "0.1.0"
description = "Sports betting intelligence platform - Discord-first"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = ["apps/bot", "apps/webhook_server", "packages/*"]

# Pyright/Pylance: resolve workspace deps (e.g. openai-agents → top-level ``agents``)
[tool.pyright]
venvPath = "."
venv = ".venv"
# Monorepo: resolve first-party packages from src/ when analysis or venv links lag.
extraPaths = [
    "apps/bot/src",
    "apps/webhook_server/src",
    "packages/analytics/src",
    "packages/agent_pipeline/src",
    "packages/database/src",
    "packages/data_feeds/src",
    "packages/models/src",
    "packages/odds_client/src",
    "packages/shared/src",
    "packages/trading_swarm/src",
    "packages/venue_adapters/src",
]

# Align Pylint with Ruff line length (editors often run both).
[tool.pylint.main]
max-line-length = 100

[tool.pylint."messages_control"]
disable = [
    "duplicate-code",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pandas>=2.0",
    "pyarrow>=23.0.1",
]
